<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_background"
    tools:context=".Activities.DetailsActivity">
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Register Yourself"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="Your efforts are valuable!"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/desc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/register_layout"
        android:elevation="10dp"
        android:translationY="10dp"
        android:translationZ="10dp">
        <RelativeLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/user_bloodgroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edit_text_background"
                android:elevation="3dp"
                android:scrollIndicators="end"
                android:spinnerMode="dropdown"
                android:tooltipText="Choose City" />
            <EditText
                android:id="@+id/user_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_below="@id/user_bloodgroup"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/Firstname"
                />
            <EditText
                android:id="@+id/user_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_firstname"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/Lastname"/>
            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_lastname"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/sym_action_email"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/Email"
                />

            <EditText
                android:id="@+id/user_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_email"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/stat_sys_phone_call"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/Mobile"/>

            <EditText
                android:id="@+id/user_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_mobile"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/ic_dialog_map"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/city"
                />
            <EditText
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_city"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/presence_online"
                android:drawablePadding="3dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:hint="@string/address"
                android:visibility="visible"
                />
            <LinearLayout
                android:id="@+id/largeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_address">
                <EditText
                    android:id="@+id/user_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="@string/state"/>
                <EditText
                    android:id="@+id/user_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/country"/>
            </LinearLayout>
            <Button
                android:id="@+id/submitbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/largeLabel"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="Submit"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>