<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <Toolbar
    android:id="@+id/toolbar_covid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
    android:titleTextColor="@android:color/white" />
    <RelativeLayout
            android:id="@+id/question_realtive_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_covid">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/covid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:text="Covid19 Recovered Form"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/covid_text_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/covid_text"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:text="Please Provide the following Details"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/card">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/que1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/que1"
                            android:textColor="#333333"
                            android:textSize="18sp"
                            />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/q1_yes_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"/>
                            <RadioButton
                                android:id="@+id/q1_no_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no"/>
                        </RadioGroup>
                        <TextView
                            android:id="@+id/que2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/que2"
                            android:textColor="#333333"
                            android:textSize="18sp"
                            />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/q2_yes_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"/>
                            <RadioButton
                                android:id="@+id/q2_no_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no"/>
                        </RadioGroup>
                        <TextView
                            android:id="@+id/que3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/que2"
                            android:text="@string/que3"
                            android:textColor="#333333"

                            android:textSize="18sp"
                            />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/q3_yes_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"/>
                            <RadioButton
                                android:id="@+id/q3_no_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no"/>
                        </RadioGroup>
                        <TextView
                            android:id="@+id/que4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/que3"
                            android:text="@string/que4"
                            android:textColor="#333333"

                            android:textSize="18sp"
                            />
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/q4_yes_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"/>
                            <RadioButton
                                android:id="@+id/q4_no_radio_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no"/>
                        </RadioGroup>

                        <Button
                            android:id="@+id/covid_submit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:text="Submit"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/covid_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/question_realtive_layout"
        android:visibility="gone">
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/covid_activity_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
    </RelativeLayout>


</RelativeLayout>